--- a/src/main/webapp/pharmacy/admin/index.xhtml
+++ b/src/main/webapp/pharmacy/admin/index.xhtml
@@ -70,7 +70,7 @@
                                                 value="List Units" 
                                                 action="#{measurementUnitController.navigateToListAllMeasurementUnit()}"  ></p:commandButton>
 
-                                            
+
                                         </div>
                                     </p:tab>
                                     <p:tab title="Medicines Management - Multiple">
@@ -171,11 +171,7 @@
                                             <p:commandButton class="w-100" ajax="false" value="Adjustment Categories" action="/pharmacy/pharmacy_adjustment_category" ></p:commandButton>
                                         </div>
                                     </p:tab>
-                                    <p:tab title="Odering">
-                                        <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100" ajax="false" value="Manage Reordering Data" action="pharmacy_set_reorder_manage" ></p:commandButton>
-                                        </div>
-                                    </p:tab>
+                                   
                                     <p:tab title="Check Entered Data">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" value="Item Distributor" action="pharmacy_item_by_distributor" ></p:commandButton>
@@ -190,9 +186,9 @@
 
                                             <h:panelGroup rendered="false">
                                                 <p:commandButton styleClass="linkButton" ajax="false" value="Reset GRN Value" action="#{pharmacyItemExcelManager.resetGrnValue()}" />
-                                                <p:commandButton styleClass="linkButton" ajax="false" value="1) Reset Qty Value" action="#{pharmacyItemExcelManager.resetQtyValue()}" />
-                                                <p:commandButton styleClass="linkButton" ajax="false" value="2) Reset Transfer Issue Value" action="#{pharmacyItemExcelManager.resetTransferIssueValue()}" />
-                                                <p:commandButton styleClass="linkButton" ajax="false"  value="3) Reset Transfer History Value" action="#{pharmacyItemExcelManager.resetTransferHistoryValue()}" />
+                                                <p:commandButton styleClass="linkButton" ajax="false" value="Reset Qty Value" action="#{pharmacyItemExcelManager.resetQtyValue()}" />
+                                                <p:commandButton styleClass="linkButton" ajax="false" value="Reset Transfer Issue Value" action="#{pharmacyItemExcelManager.resetTransferIssueValue()}" />
+                                                <p:commandButton styleClass="linkButton" ajax="false"  value="Reset Transfer History Value" action="#{pharmacyItemExcelManager.resetTransferHistoryValue()}" />
                                                 <p:commandButton styleClass="linkButton" ajax="false" value="Reset GRN Reference" action="#{pharmacyItemExcelManager.resetGrnReference()}" />
                                                 <p:commandButton styleClass="linkButton" ajax="false" value="Reset Bill No" action="#{pharmacyItemExcelManager.resetBillNo()}" />
                                                 <p:commandButton styleClass="linkButton" ajax="false" value="Remove Duplicates" action="#{pharmacyItemExcelManager.removeDuplicateAmpps()}" />
@@ -201,50 +197,55 @@
                                     </p:tab>
                                     <p:tab title="Issue To Unit">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100" ajax="false" value="1) Correction of Issue To Unit (Discount To Margin)" 
+                                            <p:commandButton class="w-100" ajax="false" 
+                                                             value="Correction of Issue To Unit (Discount To Margin)" 
                                                              action="#{pharmacyItemExcelManager.correctIssueToUnit1()}" />
-                                            <p:commandButton class="w-100" ajax="false" value="2) Correction of Issue To Unit (Reset Gross Net Value )" 
+                                            <p:commandButton class="w-100" ajax="false" 
+                                                             value="Correction of Issue To Unit (Reset Gross Net Value )" 
                                                              action="#{pharmacyItemExcelManager.correctIssueToUnit2()}" />
-                                            <p:commandButton class="w-100" ajax="false" value="3) Correction of Issue To Unit (Reset Gross Net Value To Old only Cost Issue )" 
+                                            <p:commandButton class="w-100" ajax="false" 
+                                                             value="Correction of Issue To Unit (Reset Gross Net Value To Old only Cost Issue )" 
                                                              action="#{pharmacyItemExcelManager.correctIssueToUnit3()}" />
 
                                         </div>
                                     </p:tab>
                                     <p:tab title="Major Stock Adjustment">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100" ajax="false" value="1)Stock Variant Report (Before)" 
+                                            <p:commandButton class="w-100" ajax="false"
+                                                             value="Stock Variant Report (Before)" 
                                                              action="pharmacy_variant_category_stock_by_item" />
-                                            <p:commandButton class="w-100" ajax="false" value="2)Stock Variant Adjustment(After)" 
+                                            <p:commandButton class="w-100" ajax="false"
+                                                             value="Stock Variant Adjustment(After)" 
                                                              action="pharmacy_variant_ajustment_pre_list" />
                                         </div>
                                     </p:tab>
                                     <p:tab title="Bulk Update">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" value="Update Bulk Categery" 
-                                                             action="pharmacy_update_categery_bulk" actionListener="#{pharmacyUpdateBulkController.calerAll()}" />
+                                                             action="/pharmacy/pharmacy_update_categery_bulk" actionListener="#{pharmacyUpdateBulkController.calerAll()}" />
                                             <p:commandButton class="w-100" ajax="false" value="Update Bulk Discount Allowed" 
-                                                             action="pharmacy_update_discount_allowed_bulk" actionListener="#{pharmacyUpdateBulkController.calerAll()}" />
+                                                             action="/pharmacy/pharmacy_update_discount_allowed_bulk" actionListener="#{pharmacyUpdateBulkController.calerAll()}" />
                                             <p:commandButton class="w-100" ajax="false" value="Stock Item List" 
-                                                             action="pharmacy_report_non_moving_items" actionListener="#{pharmacyUpdateBulkController.calerAll()}" />
+                                                             action="/pharmacy/pharmacy_report_non_moving_items" actionListener="#{pharmacyUpdateBulkController.calerAll()}" />
                                         </div> 
                                     </p:tab>
                                     <p:tab title="Set up">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100" ajax="false" value="01. Check Item Differences with other Database" action="pharmacy_item_mismatch_report" />
-                                            <p:commandButton class="w-100" ajax="false" value="02. Import from Excel" action="pharmacy_item_import" />
-                                            <p:commandButton class="w-100" ajax="false" value="03. Import from Excel With Stock" action="/pharmacy/pharmacy_item_import_with_stock" />
-                                            <p:commandButton class="w-100" ajax="false" value="04. Import from Excel With Stock with barcode" action="/pharmacy/pharmacy_item_import_by_barcode" />
-                                            <p:commandButton class="w-100" ajax="false" value="05. Import from Excel With Stock with name" action="/pharmacy/pharmacy_item_import_stocks_by_name" />
-                                            <p:commandButton class="w-100" ajax="false" value="06. Purchase Openning Stock" action="/pharmacy/pharmacy_purchase_openning_stock" rendered="#{webUserController.hasPrivilege('PharmacyPurchase')}" actionListener="#{pharmacyPurchaseController.makeNull()}" />
-                                            <p:commandButton class="w-100" ajax="false" value="08. Fix Categories from Excel" action="pharmacy_importer_category" />
-                                            <p:commandButton class="w-100" ajax="false" value="09. Fix Codes and Barcodes" action="pharmacy_item_import_barcode" />
-                                            <p:commandButton class="w-100" ajax="false" value="10. Error Correction" action="pharmacy_error_correction" />
-                                            <p:commandButton class="w-100" ajax="false" value="11. Transfer Request All" action="pharmacy_transfer_request_all" />
-                                            <p:commandButton class="w-100" ajax="false" value="12. Import Item Distributors" action="/pharmacy/pharmacy_item_distributor_import" />
-                                            <p:commandButton class="w-100" ajax="false" value="13. Correct Name by Barcode" action="/pharmacy/pharmacy_item_name_from_barcode" />
-                                            <p:commandButton class="w-100" ajax="false" value="13. Correct Name by Barcode" action="/pharmacy/pharmacy_item_names_missing" />
+                                            <p:commandButton class="w-100" ajax="false" value="Check Item Differences with other Database" action="pharmacy_item_mismatch_report" />
+                                            <p:commandButton class="w-100" ajax="false" value="Import from Excel" action="pharmacy_item_import" />
+                                            <p:commandButton class="w-100" ajax="false" value="Import from Excel With Stock" action="/pharmacy/pharmacy_item_import_with_stock" />
+                                            <p:commandButton class="w-100" ajax="false" value="Import from Excel With Stock with barcode" action="/pharmacy/pharmacy_item_import_by_barcode" />
+                                            <p:commandButton class="w-100" ajax="false" value="Import from Excel With Stock with name" action="/pharmacy/pharmacy_item_import_stocks_by_name" />
+                                            <p:commandButton class="w-100" ajax="false" value="Purchase Openning Stock" action="/pharmacy/pharmacy_purchase_openning_stock" rendered="#{webUserController.hasPrivilege('PharmacyPurchase')}" actionListener="#{pharmacyPurchaseController.makeNull()}" />
+                                            <p:commandButton class="w-100" ajax="false" value="Fix Categories from Excel" action="/pharmacy/pharmacy_importer_category" />
+                                            <p:commandButton class="w-100" ajax="false" value="Fix Codes and Barcodes" action="/pharmacy/pharmacy_item_import_barcode" />
+                                            <p:commandButton class="w-100" ajax="false" value="Error Correction" action="/pharmacy/pharmacy_error_correction" />
+                                            <p:commandButton class="w-100" ajax="false" value="Transfer Request All" action="/pharmacy/pharmacy_transfer_request_all" />
+                                            <p:commandButton class="w-100" ajax="false" value="Import Item Distributors" action="/pharmacy/pharmacy_item_distributor_import" />
+                                            <p:commandButton class="w-100" ajax="false" value="Correct Name by Barcode" action="/pharmacy/pharmacy_item_name_from_barcode" />
+                                            <p:commandButton class="w-100" ajax="false" value="Correct Name by Barcode" action="/pharmacy/pharmacy_item_names_missing" />
 
-                                            <p:commandButton class="w-100" ajax="false" value="13. Correct Name by Snapshot" 
+                                            <p:commandButton class="w-100" ajax="false" value="Correct Name by Snapshot" 
                                                              action="/pharmacy/pharmacy_item_names_correction_by_snapshot" />
 
 
