--- a/src/main/webapp/pharmacy/pharmacy_item_import_barcode.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_import_barcode.xhtml
@@ -1,29 +1,32 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/pharmacy/admin/index.xhtml"
+                
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:define name="content">
-        <h:form enctype="multipart/form-data">
-            <h:outputLabel value="Import Pharmaceutical Items" ></h:outputLabel>
-            <p>Please make sure the following order of Columns.</p>
-            <p>Leave First Row for Row Headings.</p>
-            <p:panelGrid columns="13" style="border: 1px solid blue;" >
-                <h:outputLabel value ="1. No " ></h:outputLabel>
-                <h:outputLabel value ="2. Category" ></h:outputLabel>
-                <h:outputLabel value ="3. Product" ></h:outputLabel>
-                <h:outputLabel value ="4. Code" ></h:outputLabel>
-                <h:outputLabel value ="5. Barcode" ></h:outputLabel>
-            </p:panelGrid>
+    <ui:define name="subcontent">
+        <h:panelGroup>
+            <h:form enctype="multipart/form-data">
+                <h:outputLabel value="Import Pharmaceutical Items" ></h:outputLabel>
+                <p>Please make sure the following order of Columns.</p>
+                <p>Leave First Row for Row Headings.</p>
+                <p:panelGrid columns="13" style="border: 1px solid blue;" >
+                    <h:outputLabel value ="1. No " ></h:outputLabel>
+                    <h:outputLabel value ="2. Category" ></h:outputLabel>
+                    <h:outputLabel value ="3. Product" ></h:outputLabel>
+                    <h:outputLabel value ="4. Code" ></h:outputLabel>
+                    <h:outputLabel value ="5. Barcode" ></h:outputLabel>
+                </p:panelGrid>
 
-            <p:fileUpload value="#{pharmacyItemExcelManager.file}" mode="simple"/>
-            <h:commandButton value="Submit" action="#{pharmacyItemExcelManager.importToExcelBarcode()}"/>
-        </h:form>
+                <p:fileUpload value="#{pharmacyItemExcelManager.file}" mode="simple"/>
+                <h:commandButton value="Submit" action="#{pharmacyItemExcelManager.importToExcelBarcode()}"/>
+            </h:form>
+        </h:panelGroup>
 
-        
+
     </ui:define>
 
 
