--- a/src/main/webapp/pharmacy/pharmacy_item_names_missing.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_names_missing.xhtml
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+               template="/pharmacy/admin/index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
             <h:commandButton value="Submit" action="#{pharmacyItemExcelManager.tnametoName()}"/>
         </h:form>
