--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -275,7 +275,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="11. Surgery Count(Type)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Admission Count(Consultant Wise)" action="#{reportController.navigateToManagementAdmissionCountReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="13. Admission Count(Payment Type Wise)" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="11. Hospital Census" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="11. Hospital Census" action="#{reportController.navigateToManagementHospitalCensusReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Room Occupancy" />
                                         <p:commandButton   class="w-100"  ajax="false" value="13. OPD Weekly Report" />
                                     </div>
