--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -270,7 +270,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Pharmacy Department Wise Sale Report" />
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Referring Doctor Wise Revenue" />
                                         <p:commandButton   class="w-100"  ajax="false" value="8. OT Room Wise Sergery Count" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="9. Surgery Count(Surgery Wise)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="9. Surgery Count(Surgery Wise)" action="#{reportController.navigateToSurgeryWiseCount()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="10. Surgery Count(Doctor Wise)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="11. Surgery Count(Type)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Admission Count(Consultant Wise)" action="#{reportController.navigateToManagementAdmissionCountReport()}"/>
