--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -28,7 +28,6 @@
                                     <div class="mb-3">
                                         <h:outputLabel value="Name" class="form-label" />
                                         <p:inputText class="form-control" value="#{patientController.searchName}">
-                                            <p:ajax event="keydown" onstart="if (event.keyCode != 13) { return false; }" listener="#{patientController.searchPatientForOpd()}" update="@form" />
                                         </p:inputText>
                                     </div>
 
@@ -79,12 +78,13 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="mb-3">
-                                        <h:commandButton value="New" styleClass="btn btn-warning"
-                                                         action="#{patientController.navigateToAddNewPatientForOpd()}" />
-                                        <h:commandButton value="Search" styleClass="btn btn-primary ms-2"
-                                                         action="#{patientController.searchPatientForOpd()}" />
-                                        <h:commandButton value="Clear" styleClass="btn btn-danger ms-2"
-                                                         action="#{patientController.clearSearchDetails()}" />
+                                        <p:commandButton value="New" styleClass="btn btn-warning"
+                                                         action="#{patientController.navigateToAddNewPatientForOpd()}" ajax="false" />
+                                        <p:commandButton id="btnSearch" value="Search" styleClass="btn btn-primary ms-2"
+                                                         action="#{patientController.searchPatientForOpd()}" ajax="false" />
+                                        <p:defaultCommand target="btnSearch"> </p:defaultCommand>
+                                        <p:commandButton value="Clear" styleClass="btn btn-danger ms-2"
+                                                         action="#{patientController.clearSearchDetails()}" ajax="false" />
                                     </div>
 
                                     <p:dataTable value="#{patientController.searchedPatients}" var="p" 
