--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -63,8 +63,7 @@
 
                             <p:menuitem 
                                 ajax="false" 
-                                action="/collecting_centre/bill"  
-                                actionListener="#{collectingCentreBillController.prepareNewBill()}" 
+                                action="#{collectingCentreBillController.navigateToCollectingCenterBillingromMenu()}"    
                                 value="Collecting Centre Billing"
                                 icon="fa fa-fw fa-hospital-alt" 
                                 rendered="#{webUserController.hasPrivilege('OpdCollectingCentreBilling')}" >
